// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas sobre el componente GifGrid debe de mostrar items cuando se cargan imágenes con useFetchGifs 1`] = `
<Fragment>
  <h3>
    Goku
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      img="https://localhost/cualquier/cosa.jpg"
      key="ABC"
      title="Cualquier cosa"
    />
    <GifGridItem
      id="ABCD"
      img="https://localhost/cualquier/cosa.jpg"
      key="ABCD"
      title="Cualquier cosa"
    />
  </div>
</Fragment>
`;

exports[`Pruebas sobre el componente GifGrid debe mostrar el componente correctamente 1`] = `
<Fragment>
  <h3>
    Goku
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Cargando ...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
